--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@
                 </div>
 
                 <div class="nav-singin border">
-                    <a href="/signin.html" style="color: white; text-decoration: none;"><p><span>Hello, sign in</span></p>
-                        <p class="nav-second">Account & Lists</p></a>
-                    
+                    <a href="/signin.html" style="color: white; text-decoration: none;">
+                        <p><span>Hello, sign in</span></p>
+                        <p class="nav-second">Account & Lists</p>
+                    </a>
+
                 </div>
                 <div class="nav-return border">
                     <p><span>Returns</span></p>
@@ -62,19 +64,19 @@
             </div>
         </div>
 
-            <div class="panel">
-                <div class="panel-all">
-                    <i class="fa-solid fa-bars"></i>
-                    All
-                </div>
-                <div class="panel-ops">
-                    <p>Today's Deals</p>
-                    <p>Customer Service</p>
-                    <p>Registry</p>
-                    <p>Gift Cards</p>
-                    <p>Sell</p>
-                </div>
+        <div class="panel">
+            <div class="panel-all">
+                <i class="fa-solid fa-bars"></i>
+                All
             </div>
+            <div class="panel-ops">
+                <p>Today's Deals</p>
+                <p>Customer Service</p>
+                <p>Registry</p>
+                <p>Gift Cards</p>
+                <p>Sell</p>
+            </div>
+        </div>
 
 
     </header>
